--- a/w3.css
+++ b/w3.css
@@ -656,7 +656,7 @@ a {
     }
 }
 
-@media (min-width:993px) {
+@media (min-width:1367px) {
     .w3-col.l1 {
         width: 8.33333%
     }
@@ -809,7 +809,7 @@ a {
     }
 }
 
-@media (min-width:993px) {
+@media (min-width:1367px) {
     .w3-modal-content {
         width: 900px
     }
@@ -823,13 +823,13 @@ a {
     }
 }
 
-@media (max-width:992px) and (min-width:601px) {
+@media (max-width:1366px) and (min-width:601px) {
     .w3-hide-medium {
         display: none !important
     }
 }
 
-@media (max-width:992px) {
+@media (max-width:1366px) {
     .w3-sidebar.w3-collapse {
         display: none
     }
@@ -1369,7 +1369,7 @@ a {
 
 .w3-button:hover {
     color: #000 !important;
-    background-color: #ccc !important
+    background-color: #ccc;
 }
 
 .w3-transparent, .w3-hover-none:hover {
